update login component class names

--- a/Kori/GlobalLogin.razor.css
+++ b/Kori/GlobalLogin.razor.css
@@ -9,35 +9,6 @@
   right: 16px;
   z-index: 1000;
 }
-.login-component > * {
-  width: 32px;
-  height: 32px;
-  padding: 0;
-  border-radius: 24px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.login-component > * img {
-  width: 20px;
-  height: 20px;
-  margin: 0;
-}
-.login-component.show {
-  display: flex;
-  gap: 12px;
-}
-.login-component__btn {
-  padding: 8px 0 !important;
-  background: none !important;
-  border: none !important;
-  font-family: "Encode Sans Expanded" !important;
-  font-size: 14px !important;
-  font-weight: 400 !important;
-  line-height: 140% !important;
-  color: white !important;
-  cursor: pointer;
-}
 .login-component .login-component__toggle {
   width: 24px;
   height: 24px;
@@ -61,6 +32,17 @@
 .login-component .login-component__toggle.loggedin.show {
   display: block;
 }
+.login-component__btn {
+  padding: 8px 0 !important;
+  background: none !important;
+  border: none !important;
+  font-family: "Encode Sans Expanded" !important;
+  font-size: 14px !important;
+  font-weight: 400 !important;
+  line-height: 140% !important;
+  color: white !important;
+  cursor: pointer;
+}
 .login-component__menu {
   display: none;
   width: 256px;
@@ -72,7 +54,7 @@
   background: var(--grey-900);
   border: 1px solid var(--grey-700);
   border-radius: 4px;
-  animation: login_fadeIn 500ms ease-in-out;
+  animation: login-component__fadeIn 500ms ease-in-out;
   z-index: 1000;
 }
 .login-component__menu.show {
@@ -80,46 +62,46 @@
   flex-direction: column;
   gap: 16px;
 }
-.login-component .login-menu__actions {
+.login-component__actions {
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 8px;
 }
-.login-component .login-menu__actions .login-menu__divider {
+.login-component__actions .login-menu__divider {
   width: 100%;
   border-bottom: 1px solid rgba(255, 255, 255, 0.8);
 }
-.login-component .login-menu__actions button {
+.login-component__actions button {
   padding: 6px 8px !important;
   border-radius: 4px !important;
 }
-.login-component .login-menu__actions button img {
+.login-component__actions button img {
   width: 16px;
   height: 16px;
 }
-.login-component .login-menu__actions .login-btn, .login-component .login-menu__actions .account-btn {
+.login-component__actions .login-btn, .login-component__actions .account-btn {
   display: flex !important;
   gap: 14px !important;
   align-items: center !important;
   background: var(--grey-800) !important;
   transition: 300ms ease-in-out;
 }
-.login-component .login-menu__actions .login-btn:hover, .login-component .login-menu__actions .account-btn:hover {
+.login-component__actions .login-btn:hover, .login-component__actions .account-btn:hover {
   background: var(--grey-700) !important;
 }
-.login-component .login-menu__actions .login-btn:active, .login-component .login-menu__actions .account-btn:active {
+.login-component__actions .login-btn:active, .login-component__actions .account-btn:active {
   background: var(--grey-800) !important;
 }
-.login-component .login-menu__actions .login-btn__content, .login-component .login-menu__actions .account-btn__content {
+.login-component__actions .login-btn__content, .login-component__actions .account-btn__content {
   text-align: left !important;
 }
-.login-component .login-menu__actions .language-btn {
+.login-component__actions .login-component__language-btn {
   display: flex !important;
   justify-content: space-between !important;
   align-items: center !important;
 }
-.login-component .login-menu__actions .language-btn__wrapper {
+.login-component__actions .login-component__language-btn-content {
   display: flex !important;
   align-items: center !important;
   gap: 14px !important;
@@ -130,51 +112,51 @@
   color: white !important;
   opacity: 0.7 !important;
 }
-.login-component .login-menu__actions .language-btn .expand-icon {
+.login-component__actions .login-component__language-btn .login-component__expand-icon {
   transition: transform 1000ms ease-in-out;
   opacity: 0.7;
 }
-.login-component .login-menu__actions .language-btn .expand-icon.rotate {
+.login-component__actions .login-component__language-btn .login-component__expand-icon.rotate {
   transform: rotate(-180deg);
 }
-.login-component .login-menu__actions .use-passkey {
+.login-component__actions .login-component__use-passkey {
   width: 100%;
 }
-.login-component .login-menu__actions .use-passkey button {
+.login-component__actions .login-component__use-passkey button {
   display: flex;
   align-content: center;
   gap: 12px;
   padding: 6px !important;
 }
-.login-component .login-menu__actions .different-email {
+.login-component__actions .login-component__different-email {
   width: 100%;
   margin: 12px 0;
 }
-.login-component .login-menu__actions .different-email span {
+.login-component__actions .login-component__different-email span {
   display: flex;
   align-content: center;
   gap: 12px;
 }
-.login-component .login-menu__actions .different-email button {
+.login-component__actions .login-component__different-email button {
   padding: 0 !important;
 }
-.login-component .login-menu__actions form .form-error {
+.login-component__actions form .login-component__form-error {
   display: none;
 }
-.login-component .login-menu__actions form .form-error span {
+.login-component__actions form .login-component__form-error-message {
   margin-top: 8px;
   color: white;
   opacity: 0.7;
 }
-.login-component .login-menu__actions form .form-error.show {
+.login-component__actions form .login-component__form-error.show {
   display: block;
 }
-.login-component .login-menu__input {
+.login-component__input {
   display: flex;
   flex-direction: column;
   gap: 4px;
 }
-.login-component .login-menu__input input {
+.login-component__input input {
   width: 100% !important;
   height: fit-content !important;
   padding: 8px 12px !important;
@@ -187,11 +169,11 @@
   font-weight: 400;
   line-height: 160%;
 }
-.login-component .login-menu__input input:focus {
+.login-component__input input:focus {
   border: var(--grey-50) !important;
   backdrop-filter: brightness(120%) !important;
 }
-.login-component .login-menu__input .submit-btn {
+.login-component__input .login-component__submit-btn {
   width: 100% !important;
   padding: 8px 12px !important;
   background: var(--grey-800) !important;
@@ -201,10 +183,10 @@
   line-height: 160%;
   transition: 300ms ease-in-out;
 }
-.login-component .login-menu__input .submit-btn:hover {
+.login-component__input .login-component__submit-btn:hover {
   background: var(--grey-700) !important;
 }
-.login-component .login-menu__input .submit-btn:active {
+.login-component__input .login-component__submit-btn:active {
   background: var(--grey-800) !important;
 }
 .login-component__overlay.show {
@@ -216,7 +198,7 @@
   z-index: 10;
 }
 
-@keyframes login_fadeIn {
+@keyframes login-component__fadeIn {
   0% {
     opacity: 0;
   }
@@ -224,7 +206,7 @@
     opacity: 1;
   }
 }
-.login-text__primary, .login-component .login-menu__header, .login-component .login-menu__actions .login-btn__content figcaption, .login-component .login-menu__actions .account-btn__content figcaption {
+.login-component__text-primary, .login-component .login-component__menu-header-wrapper, .login-component__actions .login-btn__content figcaption, .login-component__actions .account-btn__content figcaption {
   font-family: "Encode Sans Semi Expanded" !important;
   font-size: 16px !important;
   font-weight: 400 !important;
@@ -232,7 +214,7 @@
   color: var(--grey-50) !important;
 }
 
-.login-text__secondary, .login-component .login-menu__header p, .login-component .login-menu__actions .login-btn__content aside, .login-component .login-menu__actions .account-btn__content aside {
+.login-component__text-secondary, .login-component .login-component__menu-header-wrapper p, .login-component__actions .login-btn__content aside, .login-component__actions .account-btn__content aside {
   font-family: "Encode Sans Expanded" !important;
   font-size: 14px !important;
   font-weight: 400 !important;
@@ -240,7 +222,7 @@
   color: var(--grey-300) !important;
 }
 
-.login-text__btn, .login-component .login-menu__actions .language-btn {
+.login-component__text-btn, .login-component__actions .login-component__language-btn {
   font-family: "Encode Sans Expanded" !important;
   font-size: 14px !important;
   font-weight: 400 !important;
@@ -250,9 +232,9 @@
   transition: 300ms ease-in-out !important;
   opacity: 0.7 !important;
 }
-.login-text__btn:hover, .login-component .login-menu__actions .language-btn:hover {
+.login-component__text-btn:hover, .login-component__actions .login-component__language-btn:hover {
   opacity: 1 !important;
 }
-.login-text__btn:active, .login-component .login-menu__actions .language-btn:active {
+.login-component__text-btn:active, .login-component__actions .login-component__language-btn:active {
   opacity: 0.7 !important;
 }
