Change data structure from a list of strings to a dictionary (Work in progress). - Update TranslateAsync method in KoriContent.razor - Add two methods to the blog template to check if the value is valid - Update TranslateAsync method in Kori.cs - Update buildTranslationCache and translateNodes functions in KoriWidget.razor.js

--- a/Kori/KoriContent.razor
+++ b/Kori/KoriContent.razor
@@ -24,8 +24,14 @@
         }
     }
 
+    // [JSInvokable]
+    // public async Task<List<string>> TranslateAsync(List<string> content)
+    // {
+    //     return await Kori.TranslateAsync(content);
+    // }
+
     [JSInvokable]
-    public async Task<List<string>> TranslateAsync(List<string> content)
+    public async Task<Dictionary<string, string>> TranslateAsync(Dictionary<string, string> content)
     {
         return await Kori.TranslateAsync(content);
     }
