--- a/Kori/GlobalLogin.razor.css
+++ b/Kori/GlobalLogin.razor.css
@@ -12,7 +12,9 @@
 .login-component .login-component__toggle {
   width: 24px;
   height: 24px;
+  padding: 0 !important;
   background: #1a1a1a !important;
+  border: none !important;
   border-radius: 50%;
   cursor: pointer;
 }
@@ -40,6 +42,7 @@
   font-size: 14px !important;
   font-weight: 400 !important;
   line-height: 140% !important;
+  text-align: left !important;
   color: white !important;
   cursor: pointer;
 }
@@ -62,46 +65,46 @@
   flex-direction: column;
   gap: 16px;
 }
-.login-component__actions {
+.login-component__menu-actions {
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 8px;
 }
-.login-component__actions .login-menu__divider {
+.login-component__menu-actions .login-menu__divider {
   width: 100%;
   border-bottom: 1px solid rgba(255, 255, 255, 0.8);
 }
-.login-component__actions button {
+.login-component__menu-actions button {
   padding: 6px 8px !important;
   border-radius: 4px !important;
 }
-.login-component__actions button img {
+.login-component__menu-actions button img {
   width: 16px;
   height: 16px;
 }
-.login-component__actions .login-btn, .login-component__actions .account-btn {
+.login-component__menu-actions .login-component__login-btn, .login-component__menu-actions login-component__account-btn {
   display: flex !important;
   gap: 14px !important;
   align-items: center !important;
   background: var(--grey-800) !important;
   transition: 300ms ease-in-out;
 }
-.login-component__actions .login-btn:hover, .login-component__actions .account-btn:hover {
+.login-component__menu-actions .login-component__login-btn:hover, .login-component__menu-actions login-component__account-btn:hover {
   background: var(--grey-700) !important;
 }
-.login-component__actions .login-btn:active, .login-component__actions .account-btn:active {
+.login-component__menu-actions .login-component__login-btn:active, .login-component__menu-actions login-component__account-btn:active {
   background: var(--grey-800) !important;
 }
-.login-component__actions .login-btn__content, .login-component__actions .account-btn__content {
+.login-component__menu-actions .login-component__login-btn__content, .login-component__menu-actions login-component__account-btn__content {
   text-align: left !important;
 }
-.login-component__actions .login-component__language-btn {
+.login-component__menu-actions .login-component__language-btn {
   display: flex !important;
   justify-content: space-between !important;
   align-items: center !important;
 }
-.login-component__actions .login-component__language-btn-content {
+.login-component__menu-actions .login-component__language-btn-content {
   display: flex !important;
   align-items: center !important;
   gap: 14px !important;
@@ -112,51 +115,47 @@
   color: white !important;
   opacity: 0.7 !important;
 }
-.login-component__actions .login-component__language-btn .login-component__expand-icon {
+.login-component__menu-actions .login-component__language-btn .login-component__expand-icon {
   transition: transform 1000ms ease-in-out;
   opacity: 0.7;
 }
-.login-component__actions .login-component__language-btn .login-component__expand-icon.rotate {
+.login-component__menu-actions .login-component__language-btn .login-component__expand-icon.rotate {
   transform: rotate(-180deg);
 }
-.login-component__actions .login-component__use-passkey {
+.login-component__menu-actions .login-component__use-passkey {
   width: 100%;
 }
-.login-component__actions .login-component__use-passkey button {
+.login-component__menu-actions .login-component__use-passkey button {
   display: flex;
   align-content: center;
+  align-items: center;
   gap: 12px;
-  padding: 6px !important;
 }
-.login-component__actions .login-component__different-email {
+.login-component__menu-actions .login-component__use-passkey button img {
+  margin: 0 !important;
+}
+.login-component__menu-actions .login-component__different-email {
   width: 100%;
   margin: 12px 0;
 }
-.login-component__actions .login-component__different-email span {
+.login-component__menu-actions .login-component__different-email span {
   display: flex;
   align-content: center;
+  align-items: center;
   gap: 12px;
 }
-.login-component__actions .login-component__different-email button {
+.login-component__menu-actions .login-component__different-email button {
   padding: 0 !important;
 }
-.login-component__actions form .login-component__form-error {
-  display: none;
-}
-.login-component__actions form .login-component__form-error-message {
-  margin-top: 8px;
-  color: white;
-  opacity: 0.7;
-}
-.login-component__actions form .login-component__form-error.show {
-  display: block;
-}
-.login-component__input {
+.login-component__form {
   display: flex;
   flex-direction: column;
   gap: 4px;
 }
-.login-component__input input {
+.login-component__form .login-component__input {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
   width: 100% !important;
   height: fit-content !important;
   padding: 8px 12px !important;
@@ -169,11 +168,11 @@
   font-weight: 400;
   line-height: 160%;
 }
-.login-component__input input:focus {
+.login-component__form .login-component__input:focus {
   border: var(--grey-50) !important;
   backdrop-filter: brightness(120%) !important;
 }
-.login-component__input .login-component__submit-btn {
+.login-component__form .login-component__submit-btn {
   width: 100% !important;
   padding: 8px 12px !important;
   background: var(--grey-800) !important;
@@ -183,11 +182,22 @@
   line-height: 160%;
   transition: 300ms ease-in-out;
 }
-.login-component__input .login-component__submit-btn:hover {
+.login-component__form .login-component__submit-btn:hover {
   background: var(--grey-700) !important;
 }
-.login-component__input .login-component__submit-btn:active {
+.login-component__form .login-component__submit-btn:active {
   background: var(--grey-800) !important;
+}
+.login-component__form .login-component__form-error {
+  display: none;
+}
+.login-component__form .login-component__form-error span {
+  margin-top: 8px;
+  color: white;
+  opacity: 0.7;
+}
+.login-component__form .login-component__form-error.show {
+  display: block;
 }
 .login-component__overlay.show {
   width: 100vw;
@@ -206,7 +216,7 @@
     opacity: 1;
   }
 }
-.login-component__text-primary, .login-component .login-component__menu-header-wrapper, .login-component__actions .login-btn__content figcaption, .login-component__actions .account-btn__content figcaption {
+.login-component__text-primary, .login-component .login-component__menu-header-wrapper, .login-component__menu-actions .login-component__login-btn__content figcaption, .login-component__menu-actions login-component__account-btn__content figcaption {
   font-family: "Encode Sans Semi Expanded" !important;
   font-size: 16px !important;
   font-weight: 400 !important;
@@ -214,7 +224,7 @@
   color: var(--grey-50) !important;
 }
 
-.login-component__text-secondary, .login-component .login-component__menu-header-wrapper p, .login-component__actions .login-btn__content aside, .login-component__actions .account-btn__content aside {
+.login-component__text-secondary, .login-component .login-component__menu-header-wrapper p, .login-component__menu-actions .login-component__login-btn__content aside, .login-component__menu-actions login-component__account-btn__content aside {
   font-family: "Encode Sans Expanded" !important;
   font-size: 14px !important;
   font-weight: 400 !important;
@@ -222,7 +232,7 @@
   color: var(--grey-300) !important;
 }
 
-.login-component__text-btn, .login-component__actions .login-component__language-btn {
+.login-component__text-btn, .login-component__menu-actions .login-component__language-btn {
   font-family: "Encode Sans Expanded" !important;
   font-size: 14px !important;
   font-weight: 400 !important;
@@ -232,9 +242,9 @@
   transition: 300ms ease-in-out !important;
   opacity: 0.7 !important;
 }
-.login-component__text-btn:hover, .login-component__actions .login-component__language-btn:hover {
+.login-component__text-btn:hover, .login-component__menu-actions .login-component__language-btn:hover {
   opacity: 1 !important;
 }
-.login-component__text-btn:active, .login-component__actions .login-component__language-btn:active {
+.login-component__text-btn:active, .login-component__menu-actions .login-component__language-btn:active {
   opacity: 0.7 !important;
 }
