--- a/Kori/GlobalLogin.razor
+++ b/Kori/GlobalLogin.razor
@@ -210,7 +210,7 @@
 @inject Kori Kori
 
 @code {
-    [CascadingParameter] public ClaimsPrincipal? User { get; set; }
+    [CascadingParameter] public ClaimsPrincipal User { get; set; }
     [Parameter][SupplyParameterFromQuery] public string? Token { get; set; }
 
     public string? Email;
@@ -227,34 +227,14 @@
     {
         var languages = await Kori.GetLanguagesAsync();
         Language = languages.First(x => x.Id == Kori.Language);
+
+        await foreach (var state in Auth.LoginAsync(User, Token))
+            StateHasChanged();
     }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         await Js.InvokeVoidAsync("initHyperScript");
-
-        // if (!firstRender || User == null)
-        //     return;
-
-        if (firstRender)
-        {
-            if (!string.IsNullOrEmpty(Token))
-            {
-                await foreach (var state in Auth.LoginAsync(User, Token))
-                    StateHasChanged();
-            }
-            else
-            {
-                var test = await Auth.GetAsync(User);
-                var name = Auth.User.Username;
-                Regex validateGuidRegex = new Regex("^(?:\\{{0,1}(?:[0-9a-fA-F]){8}-(?:[0-9a-fA-F]){4}-(?:[0-9a-fA-F]){4}-(?:[0-9a-fA-F]){4}-(?:[0-9a-fA-F]){12}\\}{0,1})$");
-                if (!String.IsNullOrEmpty(name) && !validateGuidRegex.IsMatch(name))
-                {
-                    Auth.LoginState = LoginStates.LoggedIn;
-                    StateHasChanged();
-                }
-            }
-        }
 
     }
 
