--- a/Kori/GlobalLogin.razor.css
+++ b/Kori/GlobalLogin.razor.css
@@ -71,12 +71,12 @@
   flex-direction: column;
   gap: 8px;
 }
-.login-component__menu-actions .login-menu__divider {
+.login-component__menu-actions .login-component__menu-divider {
   width: 100%;
   border-bottom: 1px solid rgba(255, 255, 255, 0.8);
 }
 .login-component__menu-actions button {
-  padding: 6px 8px !important;
+  padding: 8px 0 !important;
   border-radius: 4px !important;
 }
 .login-component__menu-actions button img {
@@ -87,7 +87,9 @@
   display: flex !important;
   gap: 14px !important;
   align-items: center !important;
+  padding: 6px 8px !important;
   background: var(--grey-800) !important;
+  text-align: left !important;
   transition: 300ms ease-in-out;
 }
 .login-component__menu-actions .login-component__login-btn:hover, .login-component__menu-actions login-component__account-btn:hover {
