logged in UI updates

--- a/Kori/GlobalLogin.razor
+++ b/Kori/GlobalLogin.razor
@@ -152,7 +152,7 @@
                                 <img src="_content/Kori/icons/user-profile-circle.svg" /> Profile
                                 </button>
                             <button class="login-component__setup-btn login-component__btn login-component__text-btn">
-                                <img src="_content/Kori/icons/Shield.svg" /> Setup backup Email & Phone
+                                <img src="_content/Kori/icons/Shield.svg" /> Setup Backup Email
                             </button>
                             <button class="login-component__logout-btn login-component__btn login-component__text-btn" @onclick=LogoutAsync>
                                 <img src="_content/Kori/icons/Login.svg" /> Logout
